improve logging in payload

--- a/payload/Makefile
+++ b/payload/Makefile
@@ -4,4 +4,4 @@ payload_elf.h: gimme_shell.elf
 	xxd -n payload_elf -i $< $@
 
 gimme_shell.elf: gimme_shell.c
-	gcc $< -o $@ -Os -s -ffreestanding -nostdlib -N -static
+	gcc $< -o $@ -Os -s -ffreestanding -nostdlib -N -static -fno-stack-protector
